# django_wegtail

./: .gitignore  db.sqlite3  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogauthor.py  0003_blogauthororderable.py  0004_blogcategory.py  0005_alter_blogcategory_options_blogdetailpage_categories.py  0006_articalblogpage.py  0007_videoblogpage_alter_articalblogpage_options.py
flex/: models.py  serializers.py  urls.py  views.py
flex/migrations/: 0001_initial.py  0002_flexpage_content.py  0003_alter_flexpage_content.py  0004_alter_flexpage_content.py
home/: models.py
home/migrations/: 0003_homepage_banner_title.py  0004_alter_homepage_options_homepage_banner_image_and_more.py  0005_homepage_content.py  0006_homepagecourseimage.py
mysite/: urls.py
mysite/settings/: base.py  dev.py
mysite/templates/: base.html
mysite/templates/blog/: artical_blog_page.html  blog_detail_page.html  blog_listing_page.html  latest_page.html  video_blog_page.html
mysite/templates/flex/: flex_page.html
mysite/templates/home/: home_page.html  subscribe.html
mysite/templates/streams/: button_block.html  card_block.html  cta_block.html  title_and_text_block.html
site_setting/: models.py
site_setting/migrations/: 0001_initial.py
streams/: blocks.py
subscribe/: admin.py  models.py
subscribe/migrations/: 0001_initial.py  0002_alter_subscribers_options.py
